--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -7,13 +7,19 @@
     padding: 0;
 }
 
-main{
+.bee-qrcod-app{
     font-family: 'Outfit', sans-serif;
     font-size: 0.9rem; 
     min-height: 100vh;
     background: map-get($colors, bee-lightgray);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
+/*|| FOOTER SECTION */
+
+.attribution { font-size: 11px; text-align: center; }
+.attribution a { color: hsl(228, 45%, 44%); }
 
