--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300&display=swap');
 *,
 *::before,
 *::after {
@@ -7,7 +6,7 @@
     padding: 0;
 }
 
-.bee-qrcod-app{
+body{
     font-family: 'Outfit', sans-serif;
     font-size: 0.9rem; 
     min-height: 100vh;
