--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -1,8 +1,11 @@
-body{
+body {
     font-family: 'Outfit', sans-serif;
     font-size: 0.938rem; 
+    background: map-get($colors, bee-lightgray);  
+}
+
+.bee-qrcode-app {
     min-height: 100vh;
-    background: map-get($colors, bee-lightgray);
     display: flex;
     flex-direction: column;
     align-items: center;
